Fix: Adjust chat message line spacing

--- a/assets/SCSS/_emotes.scss
+++ b/assets/SCSS/_emotes.scss
@@ -105,7 +105,7 @@ $chat_emote_size: 2.3em;
 	vertical-align: middle;
 	display: inline-grid;
 	object-fit: contain;
-	margin: -0.4em 0;
+	margin: -0.25em 0;
 
 	justify-content: center;
 	align-items: center;
